tests/samples/negative/types/str_slice_bound_non_integer.ax
module str_slice_bound_non_integer;

fn main() -> i32 {
    let text: str = "abc";
    let bad = text[false:];
    return ((bad.len) as i32);
}
